--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 html, body { width: 100%; height: 100%; }
 article, #wordmark { width: 50%; margin-left: 25%; margin-right: 25%; }
 #wordmark { margin-top: 5em; }
+a, a:visited, a:active { text-decoration: inherit; color: #64BC46; }
+a:hover { text-decoration: underline; color: #64BC46; }
