--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-html, body { width: 100%; height: 100%; }
-#wordmark { margin-top: 5em; }
+ html, body { margin: 0; }
+#wordmark { margin-top: 6em; }
 article, #wordmark { width: 40%; margin-left: 30%; margin-right: 30%; }
+article { margin-top: 2em;  margin-bottom: 4em; }
 a, a:visited, a:active { text-decoration: inherit; color: #64BC46; }
 a:hover { text-decoration: underline; color: #64BC46; }
