--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
- html, body { margin: 0; }
+html, body { margin: 0; }
+body { background-color: white; font-size: 16px; color: #222; font: Arial, sans-serif; }
 #wordmark { margin-top: 6em; }
 article, #wordmark { width: 40%; margin-left: 30%; margin-right: 30%; }
 article { margin-top: 2em;  margin-bottom: 4em; }
